test/fail/basic_syntax/unterminated_multi_line_if.lly
#[
SyntaxError: Expected '}', not end of file.
Where: File "unterminated_multi_line_if.lly" at line 6
]#

if 1: {
